@@ -1,0 +1,122 @@
+/* XPM */
+static char * save_small_xpm[] = {
+"17 14 105 2",
+"  	c None",
+". 	c #000000",
+"+ 	c #353535",
+"@ 	c #8F8F8F",
+"# 	c #D8D8D8",
+"$ 	c #0C0C0C",
+"% 	c #2A271C",
+"& 	c #525252",
+"* 	c #767676",
+"= 	c #DCDCDC",
+"- 	c #E5E5E5",
+"; 	c #606060",
+"> 	c #857955",
+", 	c #524B31",
+"' 	c #929292",
+") 	c #ACACAC",
+"! 	c #CCCCCC",
+"~ 	c #E4E4E4",
+"{ 	c #D9D9D9",
+"] 	c #DEDEDE",
+"^ 	c #B6B6B6",
+"/ 	c #938761",
+"( 	c #796C42",
+"_ 	c #1B180D",
+": 	c #636363",
+"< 	c #E1E1E1",
+"[ 	c #C29191",
+"} 	c #CEBFBF",
+"| 	c #C8C8C8",
+"1 	c #A7A7A7",
+"2 	c #D6D6D6",
+"3 	c #787670",
+"4 	c #94875F",
+"5 	c #70643B",
+"6 	c #424242",
+"7 	c #BEBEBE",
+"8 	c #E6E6E6",
+"9 	c #EDEDED",
+"0 	c #C39292",
+"a 	c #BFB0B0",
+"b 	c #B0B0B0",
+"c 	c #BBBBBB",
+"d 	c #777570",
+"e 	c #8B7F58",
+"f 	c #6F633D",
+"g 	c #131009",
+"h 	c #989898",
+"i 	c #D9C7C7",
+"j 	c #C58D8D",
+"k 	c #B98080",
+"l 	c #D9CDCD",
+"m 	c #CFCFCF",
+"n 	c #686868",
+"o 	c #9F9369",
+"p 	c #6E623C",
+"q 	c #74736E",
+"r 	c #1F1F1F",
+"s 	c #CDCCCC",
+"t 	c #D6B9B9",
+"u 	c #B67979",
+"v 	c #DCD2D2",
+"w 	c #D5D5D5",
+"x 	c #706E68",
+"y 	c #A09367",
+"z 	c #655B38",
+"A 	c #777777",
+"B 	c #DDDDDC",
+"C 	c #BABAB8",
+"D 	c #1D1D1B",
+"E 	c #EAE9E7",
+"F 	c #A29469",
+"G 	c #52492B",
+"H 	c #51482C",
+"I 	c #72726D",
+"J 	c #C2C2BC",
+"K 	c #C1C1B9",
+"L 	c #B0B0A7",
+"M 	c #585851",
+"N 	c #212121",
+"O 	c #E2E3E3",
+"P 	c #D6DDDB",
+"Q 	c #2B240E",
+"R 	c #4C493C",
+"S 	c #7A7A70",
+"T 	c #ABAB9F",
+"U 	c #A7A79A",
+"V 	c #AEAEA9",
+"W 	c #1D1D1A",
+"X 	c #C8C8C2",
+"Y 	c #A5A59B",
+"Z 	c #A2A49C",
+"` 	c #CDD0CC",
+" .	c #DCDCD7",
+"..	c #DDDDD9",
+"+.	c #C6C6C6",
+"@.	c #474746",
+"#.	c #393939",
+"$.	c #B3B3B3",
+"%.	c #757575",
+"&.	c #4A4A4A",
+"*.	c #838383",
+"=.	c #DADADA",
+"-.	c #626262",
+";.	c #939393",
+">.	c #808080",
+"                  .               ",
+"              + @ # $         %   ",
+"        . & * = - - ;       > ,   ",
+"    . ' ) ! ~ { # ] ^ .   / ( _   ",
+"  : < - - [ } { | 1 2 3 4 5 .     ",
+"  6 7 8 9 0 a b c # d e f g       ",
+"    h i j k l m - n o p q r       ",
+"    . s t u v w x y z A B C D     ",
+"      A - - E F G H I J K L M     ",
+"      N < O P Q R S T U U V W     ",
+"        & X Y Z `  ...+.@..       ",
+"        #.$.- - - - %.&.          ",
+"          *.~ - =.-.              ",
+"            ;.>..                 "};
